--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Greg Zynda
-markdown: redcarpet
+markdown: redcarpet2
 pygments: true
 #destination: /u/gjzynda/html-pub/served
 #baseurl: /gjzynda/served
