--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Greg Zynda
-markdown: redcarpet2
+markdown: redcarpet
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 pygments: true
