--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: Greg Zynda
 markdown: redcarpet
 redcarpet:
-  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
+  extensions: ["tables"]
 pygments: true
 #destination: /u/gjzynda/html-pub/served
 #baseurl: /gjzynda/served
