--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
 name: Greg Zynda
-markdown: redcarpet2
-redcarpet:
-  extensions: ["tables"]
+markdown: redcarpet
 pygments: true
 #destination: /u/gjzynda/html-pub/served
 #baseurl: /gjzynda/served
