trying kramdown for math

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 name: Greg Zynda
-markdown: redcarpet
-redcarpet:
-   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
+markdown: kramdown
+#markdown: redcarpet
+#redcarpet:
+#   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 pygments: true
 #destination: /u/gjzynda/html-pub/served
 #baseurl: /gjzynda/served
