First draft of publishing an executionSystem

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ markdown: kramdown
 #markdown: redcarpet
 #redcarpet:
 #   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
-pygments: true
+highlighter: rouge
 #destination: /u/gjzynda/html-pub/served
 #baseurl: /gjzynda/served
 paginate: 5
